# o2bench

./: CMakeLists.txt  README.md  results.csv  run_tests.sh
arrays/: stack_alloc_array.cpp  stack_int.cpp  stack_sizet.cpp  stackarr.cpp  stdarr.cpp  stdvec.cpp  type.cpp
arrays/i/: stackarr.cpp  stdarr.cpp  stdarr_aligned.cpp  stdvec.cpp
arrays/i_x/: stackarr2.cpp  stdarr2.cpp  stdvec2.cpp
arrays/results_csv/4core8thread/i/: 4core_8thr_O2_i.csv  4core_8thr_noopt_i.csv  clang12_aligned.csv  clang12_alignedO2.csv
arrays/results_csv/fireflynode2/i/: fireflynode2_O2_i.csv  fireflynode2_noopt_i.csv
arrays/results_csv/fireflynode2/i_x/: fireflynode2_O2.csv
include/: printdata.h  terminal.h  type.h  writecsv.h
results_csv/4core8thread/t1/: 4core_8thr_O2.csv  4core_8thr_Oopts.csv
results_csv/fireflynode2/i_x/: fireflynode2_Oopt.csv
src/: terminal.cpp  writecsv.cpp
typedebugging/: eg_implicit.cpp  eg_persistent.cpp  eg_size_t.cpp  eg_typechaos.cpp  t2.cpp  t3.cpp  type.cpp
